DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/CCMI__Milestone_Project__c.object-meta.xml
<CustomObject>
    <description>Used for capturing the top level project in the Cloud Coach Fundamentals app (Formerly Cloud Coach Milestones)</description>
    <label>Project</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>