DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Campaign__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Milestone Projects</relationshipLabel>
    <relationshipName>Milestone_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>