DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Case__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Milestone Projects</relationshipLabel>
    <relationshipName>Milestone_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>