DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CCMI__Milestone_Project__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCMI__Milestone_Project__c</referenceTo>
    <relationshipLabel>Milestone Projects</relationshipLabel>
    <relationshipName>Milestone_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>