DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__End__c.field-meta.xml
<CustomField>
    <fullName>CCMI__End__c</fullName>
    <inlineHelpText>The calculated end date of the Project, derived the from the calculated end date of the latest finishing Task.</inlineHelpText>
    <label>Calculated End Date</label>
    <summarizedField>CCMI__Milestone_Task__c.CCMI__End__c</summarizedField>
    <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>