DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Late_Task_End__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Late_Task_End__c</fullName>
    <description>The end date of the first task that is &quot;In Progress&quot;</description>
    <label>Late Ending Task Date (System)</label>
    <summarizedField>CCMI__Milestone_Task__c.CCMI__End__c</summarizedField>
    <summaryFilterItems>
        <field>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>