DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Late_Task_Start__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Late_Task_Start__c</fullName>
    <description>The start date of the first Task marked as &quot;Not Started&quot;</description>
    <label>Late Starting Task Date (System)</label>
    <summarizedField>CCMI__Milestone_Task__c.CCMI__Start__c</summarizedField>
    <summaryFilterItems>
        <field>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>