DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Maximum_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Maximum_Task_Status__c</fullName>
    <label>Maximum Task Status</label>
    <summarizedField>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</summarizedField>
    <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>