DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Minimum_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Minimum_Task_Status__c</fullName>
    <label>Minimum Task Status</label>
    <summarizedField>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</summarizedField>
    <summaryFilterItems>
        <field>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>