DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Milestone Projects</relationshipLabel>
    <relationshipName>Milestone_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>