DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Sample_Data__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Sample_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Data</label>
    <referenceTo>CCMI__Sample_Data__c</referenceTo>
    <relationshipLabel>Milestone Projects</relationshipLabel>
    <relationshipName>Milestone_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>