DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Start__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Start__c</fullName>
    <inlineHelpText>The calculated start date of the Project, derived the from the calculated start date of the earliest starting Task.</inlineHelpText>
    <label>Calculated Start Date</label>
    <summarizedField>CCMI__Milestone_Task__c.CCMI__Start__c</summarizedField>
    <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>