DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Status_Override__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Status_Override__c</fullName>
    <inlineHelpText>A manual override of the project Status field.</inlineHelpText>
    <label>Status Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>