DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/fields/CCMI__Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Worked_Hours__c</fullName>
    <label>Entered Hours</label>
    <summarizedField>CCMI__Milestone_Task__c.CCMI__Worked_Hours__c</summarizedField>
    <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>