DigicielFull/force-app/main/default/objects/CCMI__Milestone_Project__c/listViews/All_Open_Projects.listView-meta.xml
<ListView>
    <fullName>All_Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>CCMI__Status__c</columns>
    <columns>CCMI__End__c</columns>
    <columns>CCMI__Start__c</columns>
    <columns>CCMI__Estimated_Hours__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCMI__Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>CCMI__IsTemplate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open Projects</label>
    <language>en_US</language>
</ListView>